edit CorsConfig.java for accept origin localhost pattern